--- a/app/view/index.html
+++ b/app/view/index.html
@@ -46,15 +46,15 @@
 
     <p id="upload-label"> </p>
 
-    <button 
-      class="no-display" 
+    <button
+      class="no-display"
       id="analyze-button" 
-      type="button"
       onclick="analyze()"
     > 
       Analyze 
     </button>
-    <p id="result-label">  </p>
+
+    <p style="font-size: 15px" id="result-label"> </p>
 
   </div>
 </body>
