1st responsive design

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -1,13 +1,15 @@
 <html lang='en'>
 <head>
   <meta charset='utf-8'>
+  <meta name='viewport'
+      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
   <link rel='stylesheet' href='../static/style.css'>
   <script src='../static/client.js'></script>
 </head>
 
 <body>
   <div class="center">
-    <h3 class="title"> Lung Sound Classifier 🩺 </h3>
+    <h1 class="title"> Lung Sound Classifier <br/>🩺 </h1>
 
     <p class="instruction">
       Upload your audio file from digital stretroscope 
